--- a/remote_Job/requirements.txt
+++ b/remote_Job/requirements.txt
@@ -5,10 +5,9 @@ django-ckeditor
 django-js-asset==1.2.2
 django-taggit
 django-user-visit==0.4
-# gunicorn==20.0.4
+django-crispy_forms-2.0
 psycopg2
 pytz==2019.3
 sqlparse==0.3.1
 ua-parser==0.10.0
 user-agents==2.2.0
-# whitenoise==5.0.1
