--- a/remote_Job/requirements.txt
+++ b/remote_Job/requirements.txt
@@ -6,7 +6,6 @@ django-js-asset==1.2.2
 django-taggit
 django-user-visit==0.4
 django-crispy_forms==2.0
-# psycopg2
 pytz==2019.3
 sqlparse==0.4.4
 ua-parser==0.10.0
@@ -14,3 +13,4 @@ user-agents==2.2.0
 phonenumbers
 django-phonenumber_field
 pillow
+django-adminlte-ui
