vercel deployment testing

--- a/remote_Job/vercel.json
+++ b/remote_Job/vercel.json
@@ -1,31 +1,28 @@
+
 {
     "version": 2,
     "builds": [
-        {
-            "src": "job/wsgi.py",
-            "use": "@vercel/python",
-            "config": {
-                "maxLambdaSize": "15mb",
-                "runtime": "python3.9"
-            }
-        },
-        {
-            "src": "build.sh",
-            "use": "@vercel/staticfiles",
-            "config": {
-                "distDir": "staticfiles"
-            }
+      {
+        "src": "job/wsgi.py",
+        "use": "@vercel/python",
+        "config": { "maxLambdaSize": "15mb", "runtime": "python3.9" }
+      },
+      {
+        "src": "build_files.sh",
+        "use": "@vercel/static-build",
+        "config": {
+          "distDir": "staticfiles_build"
         }
+      }
     ],
     "routes": [
-        {
-            "src": "/static/(.*)",
-            "dest": "/static/$1"
-        },
-        {
-            "src": "/(.*)",
-            "dest": "job/wsgi.py"
-        }
+      {
+        "src": "/static/(.*)",
+        "dest": "/static/$1"
+      },
+      {
+        "src": "/(.*)",
+        "dest": "job/wsgi.py"
+      }
     ]
-
-}
+  }
