vercel deployment testing-10

--- a/vercel.json
+++ b/vercel.json
@@ -10,7 +10,7 @@
       }
     },
     {
-      "src": "staticfiles/(.*)",
+      "src": "build_files.sh",
       "use": "@vercel/static-build",
       "config": {
         "distDir": "staticfiles"
@@ -20,7 +20,7 @@
   "routes": [
     {
       "src": "/static/(.*)",
-      "dest": "/staticfiles/$1"
+      "dest": "/static/$1"
     },
     {
       "src": "/(.*)",
