--- a/requirements.txt
+++ b/requirements.txt
@@ -13,7 +13,7 @@ user-agents==2.2.0
 phonenumbers
 django-phonenumber_field
 pillow
-whitenose
+whitenoise
 django-jazzmin
 psycopg2-binary==2.9.5
 python-decouple==3.6
