vercel deployment testing-10

--- a/vercel.json
+++ b/vercel.json
@@ -2,18 +2,15 @@
   "version": 2,
   "builds": [
     {
-      "src": "job/wsgi.py",
+      "src": "myweb/wsgi.py",
       "use": "@vercel/python",
-      "config": {
-        "maxLambdaSize": "15mb",
-        "runtime": "python3.9"
-      }
+      "config": { "maxLambdaSize": "15mb", "runtime": "python3.9" }
     },
     {
       "src": "build_files.sh",
       "use": "@vercel/static-build",
       "config": {
-        "distDir": "staticfiles"
+        "distDir": "staticfiles_build"
       }
     }
   ],
@@ -24,7 +21,8 @@
     },
     {
       "src": "/(.*)",
-      "dest": "job/wsgi.py"
+      "dest": "myweb/wsgi.py"
     }
   ]
 }
+
