--- a/vercel.json
+++ b/vercel.json
@@ -20,9 +20,12 @@
       "dest": "/static/$1"
     },
     {
+      "src": "/media/(.*)",  
+      "dest": "/media/$1"
+    },
+    {
       "src": "/(.*)",
       "dest": "job/wsgi.py"
     }
   ]
 }
-
