--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -1,6 +1,12 @@
 name: CI/CD with Docker in Google Cloud VM
 
 on:
+  pull_request:
+    types:
+      - synchronize
+      - opened
+      - reopened
+      - edited
   push:
     branches:
       - main
@@ -36,6 +42,6 @@ jobs:
 
       - name: SSH into Google Cloud VM
         run: |
-          ssh -v np03cs4m210080@34.16.179.250 'sudo docker pull uniquebiwas/test_remotejob:latest && sudo docker stop test_remotejob_container && sudo docker rm test_remotejob_container && sudo docker run -d --name test_remotejob_container -p 80:8000 uniquebiwas/test_remotejob:latest'
+          ssh -v np03cs4m210080@34.16.179.250 'sudo docker container prune -f && sudo docker container prune -f && sudo docker pull uniquebiwas/test_remotejob:latest && sudo docker stop test_remotejob_container && sudo docker rm test_remotejob_container && sudo docker run -d --name test_remotejob_container -p 80:8000 uniquebiwas/test_remotejob:latest'
         env:
           SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
