--- a/.github/workflows/tagpush.yaml
+++ b/.github/workflows/tagpush.yaml
@@ -81,9 +81,9 @@ jobs:
           git config --global user.email "github-actions[bot]@users.noreply.github.com"
           git add deployment.yaml
           git commit -m "Update image tag to ${TAG}"
-          git push https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/uniquebiwas/k8s-services.git HEAD:main
+          git push https://x-access-token:${{ secrets.PAT_TOKEN }}@github.com/uniquebiwas/k8s-services.git HEAD:main
 
     env:
       DOCKERHUB_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
       DOCKERHUB_PASSWORD: ${{ secrets.DOCKERHUB_PASSWORD }}
-      GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Provided by GitHub Actions automatically
+      PAT_TOKEN: ${{ secrets.PAT_TOKEN }}  # Provided by GitHub Actions automatically
