--- a/.github/workflows/tagpush.yaml
+++ b/.github/workflows/tagpush.yaml
@@ -1,89 +1,29 @@
-# name: CI/CD with Docker 
-
-# on:
-#   push:
-#     tags:
-#       - '*'
-
-# jobs:
-#   build:
-#     runs-on: ubuntu-latest
-
-#     steps:
-#       - name: Checkout Repository
-#         uses: actions/checkout@v2
-
-#       - name: Set up Python
-#         uses: actions/setup-python@v2
-#         with:
-#           python-version: 3.8
-
-#       - name: Build and Push Docker Image
-#         run: |
-#           TAG=${GITHUB_REF#refs/tags/}
-#           docker build -t uniquebiwas/test_remotejob:$TAG .
-#           echo ${{ secrets.DOCKERHUB_PASSWORD }} | docker login -u ${{ secrets.DOCKERHUB_USERNAME }} --password-stdin
-#           docker push uniquebiwas/test_remotejob:$TAG
-#         env:
-#           DOCKERHUB_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
-#           DOCKERHUB_PASSWORD: ${{ secrets.DOCKERHUB_PASSWORD }}
-
-
-name: CI/CD with Docker and Argo CD Update
+name: CI/CD with Docker 
 
 on:
   push:
     tags:
-      - '*'  # Trigger on tag creation
+      - '*'
 
 jobs:
   build:
     runs-on: ubuntu-latest
 
     steps:
-      # Step 1: Checkout the current repository (where workflow is defined)
       - name: Checkout Repository
-        uses: actions/checkout@v3
+        uses: actions/checkout@v2
 
-      # Step 2: Set up Python (if required by your environment)
       - name: Set up Python
-        uses: actions/setup-python@v3
+        uses: actions/setup-python@v2
         with:
           python-version: 3.8
 
-      # Step 3: Log in to Docker Hub
-      - name: Log in to Docker Hub
-        uses: docker/login-action@v2
-        with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_PASSWORD }}
-
-      # Step 4: Build and push Docker image to Docker Hub
       - name: Build and Push Docker Image
         run: |
           TAG=${GITHUB_REF#refs/tags/}
           docker build -t uniquebiwas/test_remotejob:$TAG .
+          echo ${{ secrets.DOCKERHUB_PASSWORD }} | docker login -u ${{ secrets.DOCKERHUB_USERNAME }} --password-stdin
           docker push uniquebiwas/test_remotejob:$TAG
-
-      # Step 5: Checkout the Argo CD repository where `deployment.yaml` exists
-      - name: Checkout Argo CD GitOps Repo
-        uses: actions/checkout@v3
-        with:
-          repository: uniquebiwas/k8s-services  # Points to your k8s-services repo
-          path: argocd_repo  # Checkout to this path
-
-      # Step 6: Update the image tag in the Kubernetes manifest (deployment.yaml)
-      - name: Update Kubernetes manifest with new image tag
-        run: |
-          cd argocd_repo/rmjob  # Navigate to the path containing deployment.yaml
-          sed -i "s|image: uniquebiwas/test_remotejob:.*|image: uniquebiwas/test_remotejob:${TAG}|" deployment.yaml  # Update the image tag
-          git config --global user.name "github-actions[bot]"
-          git config --global user.email "github-actions[bot]@users.noreply.github.com"
-          git add deployment.yaml
-          git commit -m "Update image tag to ${TAG}"
-          git push https://x-access-token:${{ secrets.PAT_TOKEN }}@github.com/uniquebiwas/k8s-services.git HEAD:main
-
-    env:
-      DOCKERHUB_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
-      DOCKERHUB_PASSWORD: ${{ secrets.DOCKERHUB_PASSWORD }}
-      PAT_TOKEN: ${{ secrets.PAT_TOKEN }}  # Provided by GitHub Actions automatically
+        env:
+          DOCKERHUB_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
+          DOCKERHUB_PASSWORD: ${{ secrets.DOCKERHUB_PASSWORD }}
