--- a/.github/workflows/tagpush.yaml
+++ b/.github/workflows/tagpush.yaml
@@ -1,4 +1,4 @@
-name: CI/CD with Docker 
+name: CI/CD with Docker
 
 on:
   push:
@@ -27,15 +27,24 @@ jobs:
         env:
           DOCKERHUB_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
           DOCKERHUB_PASSWORD: ${{ secrets.DOCKERHUB_PASSWORD }}
-        - name: Configure SSH
-          run: |
-            mkdir -p ~/.ssh
-            echo "${{ secrets.SSH_PRIVATE_KEY }}" > ~/.ssh/id_rsa
-            chmod 600 ~/.ssh/id_rsa
-            ssh-keyscan 20.70.239.117 >> ~/.ssh/known_hosts
 
-        - name: SSH into Google Cloud VM
-          run: |
-            ssh -v azureuser@20.70.239.117 'sudo docker container prune -f && sudo docker image prune -f && sudo docker pull uniquebiwas/test_remotejob:$TAG && sudo docker stop test_remotejob_container && sudo docker rm test_remotejob_container && sudo docker run -d --name test_remotejob_container -p 80:8000 uniquebiwas/test_remotejob:$TAG'        
-          env:
-            SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
+      - name: Configure SSH
+        run: |
+          mkdir -p ~/.ssh
+          echo "${{ secrets.SSH_PRIVATE_KEY }}" > ~/.ssh/id_rsa
+          chmod 600 ~/.ssh/id_rsa
+          ssh-keyscan 20.70.239.117 >> ~/.ssh/known_hosts
+
+      - name: SSH into Remote VM
+        run: |
+          TAG=${GITHUB_REF#refs/tags/}
+          ssh -v azureuser@20.70.239.117 << EOF
+            sudo docker container prune -f
+            sudo docker image prune -f
+            sudo docker pull uniquebiwas/test_remotejob:$TAG
+            sudo docker stop test_remotejob_container || true
+            sudo docker rm test_remotejob_container || true
+            sudo docker run -d --name test_remotejob_container -p 80:8000 uniquebiwas/test_remotejob:$TAG
+          EOF
+        env:
+          SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
